ingress/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  namespace: frontend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:992382600671:certificate/98c6850e-97db-4a06-ad50-52e16673b9e1
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /user/
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port:
              number: 80
      - path: /item/
        pathType: Prefix
        backend:
          service:
            name: item-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main-svc
            port:
              number: 80
